Emit newMessage on createMessage

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-    <h1>Welcome to the chat app - Socket.io</h1>
+    <p>Welcome to the chat app - Socket.io</p>
 
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
