--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="utf-8">
     <title>Page Title</title>
+
+    <script type="text/javascript" src="/js/libs/jquery-3.2.1.min.js"></script> 
 </head>
 <body>
 
     <p>Welcome to the chat app - Socket.io</p>
 
+    <ol id="messages"></ol>
+    <form id="message-form">
+        <input name="message" type="text"  placeholder="Message"/>
+        <button>Submit</button>
+    </form>
+
     <script src="/socket.io/socket.io.js"></script>
-    <script src="index.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
