--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <input name="message" type="text"  placeholder="Message"/>
         <button>Submit</button>
     </form>
+    <button id="send_location">Send Location</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
