--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <title>Page Title</title>
 
     <link rel="stylesheet" href="/css/styles.css"/>
-    <script type="text/javascript" src="/js/libs/jquery-3.2.1.min.js"></script> 
+    <script type="text/javascript" src="/js/libs/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="/js/libs/moment.js"></script>
 </head>
 <body class="chat">
 
