--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css"/>
     <script type="text/javascript" src="/js/libs/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="/js/libs/moment.js"></script>
+    <script type="text/javascript" src="/js/libs/mustache.js"></script>
 </head>
 <body class="chat">
 
@@ -27,8 +28,33 @@
         </div>
     </div>
 
-    
+    <script id="message-template" type="text/template">
+        <li class="message">
+            <div class="message__title">
+                <h4>{{from}}</h4>
+                <span>{{createdAt}}</span>
+            </div>
+            <div class="message__body">
+                <p>{{text}}</p>
+            </div>
+        </li>
+    </script>
 
+    <script id="location-message-template" type="text/template">
+        <li class="message">
+            <div class="message__title">
+                <h4>{{from}}</h4>
+                <span>{{createdAt}}</span>
+            </div>
+            <div class="message__body">
+                <p>
+                    <a href="{{url}}" target="_blank">My Current Location</a>
+                </p>
+            </div>
+        </li>
+    </script>
+
+    
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
 </body>
