--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
             </div>
             <div class="form-field">
                 <label>Display Name</label>
-                <input type="text" name="name" autofocus/>
+                <input type="text" name="name" autofocus autocomplete="off"/>
             </div>
             <div class="form-field">
                 <label>Room</label>
-                <input type="text" name="room"/>
+                <input type="text" name="room" autocomplete="off"/>
             </div>
             <div class="form-field">
                 <button>Join</button>
